ecmascript/parser/tests/test262-error-references/fail/6775a7f39c6b90fa.js.stderr
error: Expected {, got ;
 --> $DIR/tests/test262-parser/fail/6775a7f39c6b90fa.js:1:8
  |
1 | class A;
  |        ^

